# TAI-G7-Lab2

./: .gitignore  CMakeLists.txt  README.md  doubts.txt  evaluate_many  ideas.txt  plot_accuracies.py  run.sh  run_locatelang.py  run_locatelang_varying_reflen.py  todo.txt
report/: refs.bib  report.tex
results/: -t_c:0.01.txt  -t_f:9.txt  -t_n:0.5.txt  all_languages_accs.txt  individual_lang_default.txt  individual_lang_finite_context.txt  p_f.txt  p_u.txt  r_c100.txt  r_m.txt  varying_reflen.txt
results/all_languages/: -k_3_-a_0.5.txt  -k_3_-a_1.txt  -k_3_-a_10.txt  -k_3_-a_100.txt  -k_3_-a_25.txt  -k_3_-a_5.txt  -k_3_-a_50.txt  -k_6_-a_0.5.txt  -k_6_-a_1.txt  -k_6_-a_10.txt  -k_6_-a_100.txt  -k_6_-a_25.txt  -k_6_-a_5.txt  -k_6_-a_50.txt  -k_9_-a_0.5.txt  -k_9_-a_1.txt  -k_9_-a_10.txt  -k_9_-a_100.txt  -k_9_-a_25.txt  -k_9_-a_5.txt  -k_9_-a_50.txt  -p_c:100:3.txt  -p_c:10:3.txt  -p_c:1:3.txt  -p_c:1:6.txt  -p_c:1:9.txt  -p_f.txt  -p_u.txt  -r_c:100.txt  -r_m.txt  -r_n.txt  -r_o.txt  -t_c:0.01.txt  -t_f:9.txt  -t_n:0.5.txt  ll-f.txt  ll-m.txt  ll-s.txt  parsed-ll-f.txt  parsed-ll-m.txt  (+1 more)
results/all_languages_random/: -k_3_-a_0.5.txt  -k_3_-a_1.txt  -k_3_-a_10.txt  -k_3_-a_100.txt  -k_3_-a_25.txt  -k_3_-a_5.txt  -k_3_-a_50.txt  -k_6_-a_0.5.txt  -k_6_-a_1.txt  -k_6_-a_10.txt  -k_6_-a_100.txt  -k_6_-a_25.txt  -k_6_-a_5.txt  -k_6_-a_50.txt  -k_9_-a_0.5.txt  -k_9_-a_1.txt  -k_9_-a_10.txt  -k_9_-a_100.txt  (+17 more)
scripts/: color_code.py  evaluate.py  findLang.py  findlang.py  locatelang.py  plot.py  wikipedia_filter.py
src/: gmon.out  lang.cpp  lang.hpp  main.cpp  main.hpp
(+46 files in other folders)
